fixed bug with horizontal scroll

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -4,12 +4,13 @@
   background-color: #c2c2c2;
   position: absolute;
   top: 0;
-  right: -100%;
+  left: 0;
+  transform: translateX(100%);
   z-index: 1;
-  transition: right $effectDuration;
+  transition: transform $effectDuration;
 
   &--opened {
-    right: 0;
+    transform: translateX(0);
   }
 
   &__content {
